--- a/source/sass/blocks/collaboration.scss
+++ b/source/sass/blocks/collaboration.scss
@@ -4,13 +4,13 @@
 }
 
 .collaboration__title {
-  color: $color-oswald;
+  color: $color-black-font;
   font-size: 16px;
   line-height: 20px;
 }
 
 .collaboration__address {
-  color: $color-arial;
+  color: $color-black-font;
   font-family: $font-ArialMT;
   font-size: 14px;
   line-height: 20px;
