--- a/source/sass/blocks/main-nav.scss
+++ b/source/sass/blocks/main-nav.scss
@@ -1,5 +1,85 @@
-/*.main-nav {
-  display: flex;
-  flex-direction: column;
-  text-align: center;
-}*/
+.main-nav__wrapper-head {
+  padding: 9px 0 9px 20px;
+}
+
+.main-nav__list {
+  position: relative;
+}
+
+.main-nav__toggle {
+  font-size: 0;
+}
+
+.main-nav__logo-img {
+  &:hover,
+  &:focus {
+    opacity: 0.8;
+  }
+
+  &:active {
+    opacity: 0.6;
+  }
+}
+
+@media (max-width: $mobil-width-only) {
+  .main-nav--closed .main-nav__toggle {
+    &::after {
+      content: "";
+      position: absolute;
+      width: 25px;
+      height: 2px;
+      background-color: $color-black-two;
+      top: 19px;
+      right: 19px;
+      box-shadow: 0 8px 0 0 $color-black-two, 0 16px 0 0 $color-black-two;
+    }
+  }
+
+  .main-nav--opened .main-nav__toggle {
+    &::after,
+    &::before {
+      content: "";
+      position: absolute;
+      width: 25px;
+      height: 2px;
+      background-color: $color-black-two;
+      top: 28px;
+      right: 19px;
+    }
+
+    &::after {
+      transform: rotate(45deg);
+    }
+
+    &::before {
+      transform: rotate(-45deg);
+    }
+
+    .main-nav--closed .main-nav__list {
+      display: none;
+    }
+  }
+}
+
+@media (min-width: $tablet-width) {
+  .main-nav__toggle {
+    display: none;
+  }
+
+  .main-nav {
+    display: flex;
+    /*временно*/
+    justify-content: space-between;
+  }
+}
+
+@media (min-width: $desktop-width) {
+  .main-nav {
+    position: absolute;
+    top: 0;
+    margin: 0 auto;
+    width: 100%;
+    max-width: 1440px;
+    z-index: 5;
+  }
+}
