--- a/source/sass/blocks/more-products.scss
+++ b/source/sass/blocks/more-products.scss
@@ -10,7 +10,7 @@
 }
 
 .more-products__button-link {
-  background-color: #f2f2f2;
+  background-color: $color-bg-light-grey;
   padding: 10px 0;
   min-width: 280px;
   text-align: center;
@@ -41,7 +41,7 @@
   }
 
   .more-products__title {
-    color: $color-oswald;
+    color: $color-black-font;
     font-size: 20px;
     line-height: 20px;
     text-align: center;
@@ -51,7 +51,7 @@
   }
 
   .more-products__description {
-    color: $font-ArialMT;
+    color: $color-grey-font;
     text-align: center;
     font-size: 16px;
     padding-bottom: 35px;
@@ -60,7 +60,7 @@
 
   .more-products__button-link {
     margin-bottom: 38px;
-    color: $color-oswald;
+    color: $color-black-font;
   }
 }
 
