--- a/source/sass/blocks/main-nav.scss
+++ b/source/sass/blocks/main-nav.scss
@@ -77,9 +77,10 @@
   .main-nav {
     position: absolute;
     top: 0;
-    margin: 0 auto;
     width: 100%;
     max-width: 1440px;
     z-index: 5;
+    left: 50%;
+    transform: translateX(-50%);
   }
 }
