--- a/source/sass/blocks/main-nav.scss
+++ b/source/sass/blocks/main-nav.scss
@@ -58,6 +58,10 @@
     .main-nav--closed .main-nav__list {
       display: none;
     }
+
+    .main-nav--nojs .main-nav__toggle {
+      display: none;
+    }
   }
 }
 
