--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -49,7 +49,7 @@ $color-grey-border: #d5d5d5;
 $color-white: rgb(255, 255, 255);
 $white60: rgba(255, 255, 255, 0.6);
 $white30: rgba(255, 255, 255, 0.3);
-
+$temporary-hero-color: #ffa530;
 
 @import "fonts";
 @import "mixins";
