--- a/source/sass/blocks/advantages.scss
+++ b/source/sass/blocks/advantages.scss
@@ -42,7 +42,7 @@
     height: 50px;
     background-color: $color-green-two;
     background-position: center;
-    border-radius: 50px;
+    border-radius: 50%;
     top: 25px;
     left: 30px;
   }
@@ -66,7 +66,7 @@
     height: 50px;
     background-color: $color-green-two;
     background-position: center;
-    border-radius: 50px;
+    border-radius: 50%;
     top: 25px;
     left: 30px;
   }
@@ -160,7 +160,6 @@
       height: 200px;
       background-color: $color-green-two;
       background-position: center;
-      border-radius: 200px;
       top: 92px;
       left: auto;
       right: 62px;
@@ -182,7 +181,6 @@
     &::before {
       width: 200px;
       height: 200px;
-      border-radius: 200px;
       top: 92px;
       left: auto;
       right: 62px;
@@ -247,7 +245,6 @@
       height: 100px;
       background-color: $color-green-two;
       background-position: center;
-      border-radius: 100px;
       top: 54px;
       left: 92px;
       //right: auto;
@@ -269,7 +266,6 @@
     &::before {
       width: 100px;
       height: 100px;
-      border-radius: 100px;
       top: 54px;
       left: 92px;
       //right: auto;
