--- a/source/sass/blocks/collaboration.scss
+++ b/source/sass/blocks/collaboration.scss
@@ -1,16 +1,19 @@
 .collaboration__wrapper {
   display: flex;
   justify-content: space-between;
+  align-items: center;
 }
 
 .collaboration__title {
   color: $color-black-font;
+  text-transform: uppercase;
   font-size: 16px;
   line-height: 20px;
+  font-weight: 400;
 }
 
 .collaboration__address {
-  color: $color-black-font;
+  color: $color-grey-font;
   font-family: $font-ArialMT;
   font-size: 14px;
   line-height: 20px;
