--- a/source/sass/blocks/container.scss
+++ b/source/sass/blocks/container.scss
@@ -5,6 +5,13 @@
   position: relative;
 }
 
+.container--mobil {
+  margin: 0 auto;
+  width: 100%;
+  padding: 0;
+  position: relative;
+}
+
 @media (min-width: $tablet-width) {
   .container {
     max-width: 768px;
