--- a/source/sass/blocks/features.scss
+++ b/source/sass/blocks/features.scss
@@ -78,7 +78,22 @@
     padding-left: 0;
   }
 
+  .features {
+    padding: 0;
+  }
+
   .features__item {
+    &::after {
+      position: absolute;
+      font-family: "Oswald", "Arial", sans-serif;
+      font-size: 295px;
+      top: 94px;
+      left: 100px;
+      color: $color-bg-light-grey;
+      width: 71px;
+      height: 228px;
+      z-index: 1;
+    }
     font-size: 16px;
     line-height: 24px;
     padding-top: 100px;
@@ -87,67 +102,27 @@
     z-index: 2;
   }
 
-  .features {
-    padding: 0;
-  }
-
   .features__item--sheet {
     &::after {
       content: "1";
-      position: absolute;
-      font-family: "Oswald", "Arial", sans-serif;
-      font-size: 295px;
-      top: 94px;
-      left: 100px;
-      color: $color-bg-light-grey;
-      width: 71px;
-      height: 228px;
-      z-index: 1;
     }
   }
 
   .features__item--tank {
     &::after {
       content: "2";
-      position: absolute;
-      font-family: "Oswald", "Arial", sans-serif;
-      font-size: 295px;
-      top: 94px;
-      left: 100px;
-      color: $color-bg-light-grey;
-      width: 71px;
-      height: 228px;
-      z-index: 1;
     }
   }
 
   .features__item--tableware {
     &::after {
       content: "3";
-      position: absolute;
-      font-family: "Oswald", "Arial", sans-serif;
-      font-size: 295px;
-      top: 94px;
-      left: 100px;
-      color: $color-bg-light-grey;
-      width: 71px;
-      height: 228px;
-      z-index: 1;
     }
   }
 
   .features__item--clock {
     &::after {
       content: "4";
-      position: absolute;
-      font-family: "Oswald", "Arial", sans-serif;
-      font-size: 295px;
-      top: 94px;
-      left: 100px;
-      color: $color-bg-light-grey;
-      width: 71px;
-      height: 228px;
-      z-index: 1;
     }
   }
 }
