--- a/source/sass/blocks/product.scss
+++ b/source/sass/blocks/product.scss
@@ -45,21 +45,45 @@
 .product__button {
   text-align: center;
   padding: 10px 0;
+  margin: 0 20px;
+}
+
+.product__img--tablet {
+  display: none;
+}
+
+.product__img--desktop {
+  display: none;
 }
 
 @media (min-width: $tablet-width) {
   .product {
     flex-direction: column;
     background-color: $color-bg-light-grey;
-    padding: 0 40px;
+    padding: 0 38px 0 37px;
   }
 
   .product__img-link {
     background-color: $color-bg-light-grey;
     text-align: center;
+    position: relative;
+    width: 324px;
   }
 
   .product__img {
+    display: none;
+  }
+
+  .product__img--tablet {
+    display: inherit;
+    position: absolute;
+    width: 324px;
+    bottom: 0;
+    left: 0;
+    z-index: 2;
+  }
+
+  .product__img--desktop {
     display: none;
   }
 
@@ -68,19 +92,19 @@
     font-size: 20px;
     line-height: 20px;
     text-align: center;
-    padding: 40px 40px 30px 40px;
+    padding: 39px 45px 20px 45px;
   }
 
   .product__button {
-    margin: 30px 40px 40px 40px;
+    margin: 30px 38px 40px 37px;
   }
 
   .product__description-wrapper {
     font-size: 16px;
     line-height: 16px;
     color: $color-grey-font;
-    padding-top: 10px;
-    padding-bottom: 10px;
+    padding-top: 8px;
+    padding-bottom: 8px;
     border-bottom: 1px solid $color-grey-border;
   }
 }
@@ -90,11 +114,23 @@
     display: none;
   }
 
+  .product__img--tablet {
+    display: none;
+  }
+
+  .product__img--desktop {
+    display: inherit;
+    position: absolute;
+    width: 245px;
+    bottom: 0;
+    left: 40px;
+  }
+
   .product-catalog__list {
     display: flex;
   }
 
   .product__title {
-    padding: 40px 0 30px 0;
+    padding: 38px 5px 28px 5px;
   }
 }
