--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -44,8 +44,9 @@ $color-black-two: #222222;
 $color-grey-font: #444444;
 $color-brownish-grey: #666666;
 $color-pinkish-grey: #cdcdcd;
-$color-bg-light-grey: #f2f2f4;
-$color-grey-border: #d5d5d5;
+$color-bg-light-grey: #f2f2f2;
+$color-grey-border: #ececec;
+$color-grey-focus: #ebebeb;
 $color-white: rgb(255, 255, 255);
 $white60: rgba(255, 255, 255, 0.6);
 $white30: rgba(255, 255, 255, 0.3);
