--- a/source/sass/blocks/hero.scss
+++ b/source/sass/blocks/hero.scss
@@ -1,3 +1,13 @@
+.hero {
+  @media (min-resolution: $retina-dppx) {
+    background-image: url("../img/index-background-mobile@2x.jpg");
+    background-size: 320px auto;
+  }
+  background-image: url("../img/index-background-mobile@1x.jpg");
+  background-repeat: no-repeat;
+  background-position: top;
+}
+
 .hero__wrapper-title {
   display: flex;
   flex-direction: column;
@@ -45,16 +55,9 @@
   transform: translateX(-50%);
 }
 
-.hero__img--desktop {
-  display: none;
-}
-
-.hero__img--tablet {
-  display: none;
-}
-
 @media (min-width: $tablet-width) {
   .hero {
+    background: none;
     padding-top: 60px;
   }
 
@@ -101,22 +104,21 @@
   }
 
   .hero__img {
-    display: none;
-  }
-
-  .hero__img--tablet {
-    display: inherit;
+    width: 709px;
     margin-top: -80px;
     z-index: 1;
-  }
-
-  .hero__img--desktop {
-    display: none;
   }
 }
 
 @media (min-width: $desktop-width) {
   .hero {
+    @media (min-resolution: $retina-dppx) {
+      background-image: url("../img/index-background-desktop@2x.jpg");
+      background-size: 720px auto;
+    }
+    background-image: url("../img/index-background-desktop@1x.jpg");
+    background-repeat: no-repeat;
+    background-position: right top;
     display: flex;
     padding-top: 200px;
   }
@@ -138,17 +140,9 @@
   }
 
   .hero__img {
-    display: none;
-  }
-
-  .hero__img--tablet {
-    display: none;
-  }
-
-  .hero__img--desktop {
-    display: inherit;
     position: relative;
-    left: -13px;
-    top: -23px;
+    width: 552px;
+    left: -45px;
+    top: 0;
   }
 }
