--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -47,7 +47,7 @@ $color-grey-font: #444444;
 $color-brownish-grey: #666666;
 $color-pinkish-grey: #cdcdcd;
 $color-bg-light-grey: #f2f2f2;
-$color-grey-border: #ececec;
+$color-grey-border: #cdcdcd;
 $color-grey-focus: #ebebeb;
 $color-white: rgb(255, 255, 255);
 $white60: rgba(255, 255, 255, 0.6);
