--- a/source/sass/blocks/collaboration.scss
+++ b/source/sass/blocks/collaboration.scss
@@ -2,6 +2,12 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
+  background-color: $color-grey-focus;
+  padding: 30px 20px 25px;
+}
+
+.collaboration__wrapper--index {
+  background-color: transparent;
 }
 
 .collaboration__title {
@@ -10,6 +16,7 @@
   font-size: 16px;
   line-height: 20px;
   font-weight: 400;
+  margin: 0;
 }
 
 .collaboration__address {
@@ -17,6 +24,7 @@
   font-family: $font-ArialMT;
   font-size: 14px;
   line-height: 20px;
+  margin: 0;
 }
 
 .collaboration__map {
