--- a/source/sass/blocks/footer.scss
+++ b/source/sass/blocks/footer.scss
@@ -17,6 +17,10 @@
   padding: 40px 0 30px 0;
 }
 
+.footer__social {
+  background-color: $color-grey-focus;
+}
+
 .footer__social-list {
   @include reset-list;
   list-style: none;
