--- a/source/sass/blocks/additional-products.scss
+++ b/source/sass/blocks/additional-products.scss
@@ -56,6 +56,12 @@
     left: 50%;
     transform: translateX(-50%);
   }
+
+  @media (min-resolution: $retina-dppx) {
+    background-image: url("../img/gift-photo-mobile@2x.jpg");
+    background-size: 280px auto;
+  }
+  font-family: "ArialMT", "Arial", sans-serif;
   color: $color-white;
   padding: 185px 60px 44px;
   text-align: center;
@@ -74,10 +80,16 @@
   .additional-products__title {
     font-size: 36px;
     line-height: 36px;
-    margin-left: 30px;
+    margin-top: 0;
     padding-left: 37px;
     padding-right: 37px;
     max-width: 419px;
+  }
+
+  .additional-products__title-wrapper {
+    &::after {
+      bottom: 10px;
+    }
   }
 
   .additional-products__item {
@@ -91,6 +103,65 @@
   }
 
   .additional-products__gift-title {
+    &::after {
+      top: 65px;
+      left: 90px;
+      transform: none;
+    }
+
+    @media (min-resolution: $retina-dppx) {
+      background-image: url("../img/gift-photo-tablet@2x.jpg");
+      background-size: 708px auto;
+    }
     background-image: url("../img/gift-photo-tablet@1x.jpg");
+    padding: 75px 125px 69px 420px;
+    text-align: left;
+  }
+}
+
+@media (min-width: $desktop-width) {
+  .additional-products {
+    margin-top: -70px;
+  }
+
+  .additional-products__title {
+    margin-left: -37px;
+  }
+
+  .additional-products__gift-title {
+    &::after {
+      top: 65px;
+      left: 50%;
+      transform: translateX(-50%);
+    }
+
+    @media (min-resolution: $retina-dppx) {
+      background-image: url("../img/gift-photo-desktop@2x.jpg");
+      background-size: 245px auto;
+    }
+    background-image: url("../img/gift-photo-desktop@1x.jpg");
+    padding: 187px 43px 42px;
+    text-align: center;
+    max-width: 245px;
+  }
+
+  .additional-products__list {
+    border: none;
+    border-top: 1px solid $color-pinkish-grey;
+    margin: 0;
+    width: 75%;
+  }
+
+  .additional-products__wrapper {
+    display: flex;
+    justify-content: space-between;
+  }
+
+  .additional-card__value-wrapper {
+    width: 70%;
+  }
+
+  .additional-card__description {
+    width: 285px;
   }
 }
