--- a/source/sass/blocks/container.scss
+++ b/source/sass/blocks/container.scss
@@ -18,11 +18,25 @@
     max-width: 768px;
     padding: 0 30px;
   }
+
+  .full-container {
+    max-width: 768px;
+    margin: 0 auto;
+    width: 100%;
+    position: relative;
+  }
 }
 
 @media (min-width: $desktop-width) {
   .container {
     max-width: 1440px;
     padding: 0 110px;
+  }
+
+  .full-container {
+    max-width: 1440px;
+    margin: 0 auto;
+    width: 100%;
+    position: relative;
   }
 }
