--- a/source/sass/blocks/product.scss
+++ b/source/sass/blocks/product.scss
@@ -6,12 +6,16 @@
 
 .product__title {
   margin: 0;
-  color: $color-black;
   font-size: 16px;
   line-height: 20px;
+  font-weight: 500;
   text-transform: uppercase;
   padding-right: 70px;
   padding-bottom: 5px;
+}
+
+.product__title-link {
+  color: $color-black;
 }
 
 .product__description {
