Сделал подложки фонов градиентом + отредактировал состояния

--- a/source/sass/blocks/collaboration.scss
+++ b/source/sass/blocks/collaboration.scss
@@ -82,6 +82,8 @@
     max-width: 1440px;
     margin: 0 auto;
     position: relative;
+    //Появляется полоска от тега Picture
+    height: 400px;
   }
 
   .collaboration__map-img {
