--- a/source/sass/blocks/site-navigation.scss
+++ b/source/sass/blocks/site-navigation.scss
@@ -64,25 +64,25 @@
   .site-navigation__link--desktop-index {
     &:hover,
     &:focus {
-      color: $temporary-hero-color;
+      color: $white60;
     }
 
     &:active {
-      color: $temporary-hero-color;
+      color: $white30;
     }
     font-size: 20px;
-    color: $temporary-hero-color;
+    color: $color-white;
   }
 
   .site-navigation__link--desktop-index-active {
     &:hover,
     &:focus {
-      border-bottom: 2px solid $temporary-hero-color;
+      border-bottom: 2px solid $white60;
     }
 
     &:active {
-      border-bottom: 2px solid $temporary-hero-color;
+      border-bottom: 2px solid $white30;
     }
-    border-bottom: 2px solid $temporary-hero-color;
+    border-bottom: 2px solid $color-white;
   }
 }
